# rs-malloc-array

./: Cargo.toml  README.md
src/: alloc.rs  init.rs  iter.rs  lib.rs  ptr.rs  reinterpret.rs  store.rs
